# tileconnect

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  design.md  functions.cmake
.github/workflows/: cmake.yml
src/executable/: CMakeLists.txt
src/executable/src/: main.cpp
src/libtc/: CMakeLists.txt
src/libtc/src/: board.cpp  common.cpp  tc_export.hpp  tc_module.cppm  tc_module.ixx  token.cpp  token_board.cpp
src/libtc/tests/: board.tests.cpp  catch_include.hpp  token.tests.cpp  token_board.tests.cpp
src/libtci/: CMakeLists.txt
src/libtci/src/: ievent.cpp  igame.cpp  tci_module.ixx
tests/: CMakeLists.txt  board.tests.cpp  catch_include.hpp  token.tests.cpp  token_board.tests.cpp
